# dino

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
include/components/: AnimationComponent.h  CoinComponent.h  CollisionComponent.h  EnemyComponent.h  HealthComponent.h  PhysicsComponent.h  PlayerComponent.h  PowerUpComponent.h  SpriteComponent.h
include/core/: AchievementSystem.h  AssetManager.h  AudioManager.h  Constants.h  Game.h  GameState.h  HighScoreManager.h  InputManager.h  KeyBindings.h  SFMLCompat.h
include/ecs/: Entity.h
include/entities/: EnemyFactory.h  ObstacleFactory.h  PlayerFactory.h
include/levels/: AquaticLevel.h  CaveLevel.h  DesertDayLevel.h  DesertNightLevel.h  GrayscaleLevel.h  InfiniteLevel.h  Level.h  LevelManager.h  VolcanoLevel.h
include/systems/: AnimationSystem.h  CoinSystem.h  CollisionSystem.h  EnemyAISystem.h  ParallaxSystem.h  ParticleSystem.h  PhysicsSystem.h  PlayerControlSystem.h  PowerUpSystem.h  RenderSystem.h
include/ui/: GameOverScreen.h  HUD.h  Menu.h  PauseMenu.h
scripts/: CMakeLists-linux.txt  install_deps.sh  package.bat  package.sh
src/: abi_compat.cpp
src/core/: AchievementSystem.cpp  AssetManager.cpp  AudioManager.cpp  Game.cpp  HighScoreManager.cpp  InputManager.cpp  KeyBindings.cpp
src/entities/: EnemyFactory.cpp  ObstacleFactory.cpp  PlayerFactory.cpp
src/levels/: AquaticLevel.cpp  CaveLevel.cpp  DesertDayLevel.cpp  DesertNightLevel.cpp  GrayscaleLevel.cpp  InfiniteLevel.cpp  LevelManager.cpp  VolcanoLevel.cpp
src/systems/: AnimationSystem.cpp  CoinSystem.cpp  CollisionSystem.cpp  EnemyAISystem.cpp  ParallaxSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  PowerUpSystem.cpp  RenderSystem.cpp
src/ui/: GameOverScreen.cpp  HUD.cpp  Menu.cpp  PauseMenu.cpp
tools/: generate_textures.cpp  test_audio.cpp
